Cherry-pick 276337@main (c3a01735d064). https://bugs.webkit.org/show_bug.cgi?id=265154

[GTK] Failed to create GBM buffer of size 0x0: Invalid argument
    https://bugs.webkit.org/show_bug.cgi?id=265154

    Reviewed by Michael Catanzaro.

    This happens because in some cases we schedule a layer flush before the
    drawing area size is initially updated. It's easier to happen in the
    case of inspector because we don't delay the web process creation until
    the first load in that case. We should just ignore layer flush requests
    when the view size is empty since we won't be able to render anything
    anyway. Also set the device scale factor before the page is initialized
    to avoid sending an IPC message right after web page creation.

    * Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
    (webkitWebViewBaseCreateWebPage):
    * Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
    (WebKit::LayerTreeHost::scheduleLayerFlush):

    Canonical link: https://commits.webkit.org/276337@main